--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "express": "^4.16.3",
+    "mongodb": "^3.1.4",
     "mongoose": "^5.2.13"
   }
 }
