--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^2.4.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.4",
-    "mongoose": "^5.2.13"
+    "mongoose": "^5.2.13",
+    "superagent": "^3.8.3"
   }
 }
