--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "mongodb": "^3.1.4",
     "mongoose": "^5.2.13",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "web3": "^1.0.0-beta.36"
   }
 }
